# SafePathsRNAPC

./: .gitignore  CMakeLists.txt  README  README.md
data/: compute_summary_tables.ipynb  requirements.txt
data/arabidopsis_thaliana/data_manipulation/: graph_creation.ipynb
data/arabidopsis_thaliana/evaluation/: compute_metrics.ipynb  compute_tables.ipynb  summary.json
data/arabidopsis_thaliana/experiments/: mpc.sh  run_experiments.ipynb
data/brewers_yeast/: CDS.bed  all.bed  exons.bed
data/brewers_yeast/data_manipulation/: graph_creation.ipynb
data/brewers_yeast/evaluation/: compute_metrics.ipynb  compute_tables.ipynb  summary.json
data/brewers_yeast/experiments/: heuristic.sh  mpc.sh  optimized.sh  run_experiments.ipynb  two_finger.sh  unoptimized.sh
data/caenorhabditis_elegans/: CDS.bed
data/caenorhabditis_elegans/data_manipulation/: graph_creation.ipynb
data/data_manipulation/: graph_creation.ipynb
data/evaluation/: compute_metrics.ipynb  compute_tables.ipynb  summary.json
data/experiments/: mpc.sh  run_experiments.ipynb
data/fruit_fly/: CDS.bed  all.bed  exons.bed
data/fruit_fly/evaluation/: summary.json  (+2 more)
data/magnaporthe_oryzae/: CDS.bed  all.bed  exons.bed
data/scripts/: gtf2bed.py
executables/: CMakeLists.txt  main.cpp
experiments/: CMakeLists.txt  run_mpc.cpp  run_safe_paths.cpp  run_safe_paths_naive.cpp  run_safe_paths_safe_edges_opt.cpp  run_safe_paths_unoptimized.cpp
includes/: utils.h
includes/algorithms/: filter_paths.h  greedy_approx.h  mpc.h  safe_edges.h  safe_paths.h  top_sort.h
src/: CMakeLists.txt  utils.cpp
src/algorithms/: filter_paths.cpp  greedy_approx.cpp  mpc.cpp  safe_edges.cpp  safe_paths.cpp  top_sort.cpp
(+47 files in other folders)
